--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,12 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %> </p>
-<ul>
-  <li><%= link_to "edit", edit_article_path(@article) %>
-  <li><%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "do you really want to delete the article?"} %></li>
-  <li><%= link_to "<< Back to Articles List", articles_path %></li>
-</ul>
+
+<%= link_to "edit", edit_article_path(@article) %>
+<%= link_to "delete", article_path(@article), method: :delete, data: {confirm: "do you really want to delete the article?"} %>
+
+<h3> Comments (<%= @article.comments.size %>) </h3>
+<%= render partial: 'articles/comment', collection: @article.comments %>
+
+<%= render partial: 'comments/form' %>
+
+<%= link_to "<< Back to Articles List", articles_path %>
